@@ -1,3 +1,12 @@
+2024-03-06T08:09:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8168824114 # 178
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
+* notice: last 14d: unq all: 1 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 339 705 / 353 732
+* notice: next accum: outdated-unq outdated-all / unq all: 339 705 / 354 733
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-02-21 2024-03-06]
+
 2024-03-06T00:30:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8164994210 # 177
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
